Updating to new gulp 4 and wire Webpack into the mix .provides npm package upgrades to install without warnings 8^) .provides the working webpack setup .provides enough ts to js in webpack to prove the point .updates the README 8^) ; time for a beer, last one to the pub buys

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css">
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
+  <div id="window_stat" class="status-box"></div>
   <div class="container">
-    <div class="col-lg-7 col-md-12">
+    <div class="heading">
+      <h2>Aspire to create unbreakable eligance</h2>
+    </div>
+    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
       <div class="blocks">
-        <div class="block black ">
-            <span class="left">
-              Account Name
-            </span>
-            <span class="right">
+        <div class="block black grid">
+            <div class="left">
+              <p>Account Name</p>
+              <p class="small">(at play with svg text)=>{<span class="no-break">resize and see</span>}</p>
+            </div>
+            <div class="right">
               <svg viewBox="0 0 200 30">
                 <text y="50%" x="100%" text-anchor="end">$8,200,250,412,333.25</text>
               </svg>
-            </span>
+            </div>
         </div>
-        <div class="block grey">
+        <div class="block grey grid">
             <p class="left">
               Something a bit longer in length with more description
             </p>
@@ -28,7 +34,7 @@
               </svg>
             </span>
         </div>
-        <div class="block white grid">
+        <div class="block white grid pad-10px">
 
               <div class="left arrow-box">
                 <div class="t">
@@ -50,7 +56,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-md-12">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
       <div class="article">
         <h2>Title</h2>
         <p>
