--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <div id="window_stat" class="status-box"></div>
   <div class="container">
     <div class="heading">
-      <h2>Aspire to create unbreakable eligance</h2>
+      <h2>Aspire to create unbreakable elegance</h2>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
       <div class="blocks">
