Setup simple shop

--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,14 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css">
-    <script src="js/app.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
+    <title>Faux Shopping</title>
   </head>
   <body>
-  <div id="window_stat" class="status-box"></div>
-  <div class="container">
-    <div class="heading">
-      <h2>Aspire to create unbreakable elegance</h2>
-    </div>
-    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-      <div class="blocks">
-        <div class="block black grid">
-            <div class="left">
-              <p>Account Name</p>
-              <p class="small">(at play with svg text)=>{<span class="no-break">resize and see</span>}</p>
-            </div>
-            <div class="right">
-              <svg viewBox="0 0 200 30">
-                <text y="50%" x="100%" text-anchor="end">$8,200,250,412,333.25</text>
-              </svg>
-            </div>
-        </div>
-        <div class="block grey grid">
-            <p class="left">
-              Something a bit longer in length with more description
-            </p>
-            <span class="right">
-              <svg viewBox="0 0 200 30">
-                <text y="50%" x="100%" text-anchor="end">$1,250.25</text>
-              </svg>
-            </span>
-        </div>
-        <div class="block white grid pad-10px">
-
-              <div class="left arrow-box">
-                <div class="t">
-                    left top detail
-                </div>
-                <div class="">
-                  left bottom detail
-                </div>
-              </div>
-              <div class="right">
-                <div class="">
-                    right top detail
-                </div>
-                <div class="t">
-                  right bottom detail
-                </div>
-              </div>
-            <div class="clearfix"></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-      <div class="article">
-        <h2>Title</h2>
-        <p>
-          Marianne Heberlein of the Department of Evolutionary Biology and Experimental Studies at the University of Zürich noticed an odd behavior in her dogs:
-          <blockquote>
-            <span>
-              One would try to distract the other, then steal its bed.
-            </span>
-          </blockquote>
-          She wondered if dogs would also use this conniving behavior in their relationships with humans.
-        </p>
-      </div>
-    </div>
-    <div class="col-lg-12 transactions">
-      <div class="blocks">
-        <div class="block grey">
-          <p>
-            <span class="left">
-              Account Name
-            </span>
-            <span class="right">
-              $10.25
-            </span>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div id="root" class="container"></div>
+  <script src="js/app.js"></script>
   </body>
 </html>
